# ChangeLog for net-analyzer/ettercap
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.88 2012/05/04 06:08:11 jdhore Exp $

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> ettercap-0.7.4.ebuild,
  ettercap-0.7.4.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*ettercap-0.7.4.1 (04 Feb 2012)

  04 Feb 2012; Tim Harder <radhermit@gentoo.org> +ettercap-0.7.4.1.ebuild:
  Version bump.

  09 Dec 2011; Tim Harder <radhermit@gentoo.org>
  files/ettercap-0.7.4-autotools.patch:
  Use DESTDIR to remove la files from the correct location.

*ettercap-0.7.4 (06 Dec 2011)

  06 Dec 2011; Tim Harder <radhermit@gentoo.org> +ettercap-0.7.4.ebuild,
  +files/ettercap-0.7.4-autotools.patch, +files/ettercap-0.7.4-flags.patch:
  Version bump. Update to EAPI 4 and add pcre use flag.

  28 Mar 2011; Tim Harder <radhermit@gentoo.org> -ettercap-0.7.3-r2.ebuild,
  -ettercap-0.7.3-r3.ebuild, ettercap-0.7.3-r4.ebuild:
  Remove old, update to EAPI 2, and use slot dep for gtk+.

  25 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
  ettercap-0.7.3-r4.ebuild:
  ppc64 stable wrt #347593

  05 Jan 2011; Markos Chandras <hwoarang@gentoo.org> ettercap-0.7.3-r4.ebuild:
  Stable on amd64 wrt bug #347593

  18 Dec 2010; Raúl Porcel <armin76@gentoo.org> ettercap-0.7.3-r4.ebuild:
  alpha/arm/sparc stable wrt #347593

  07 Dec 2010; Jeroen Roovers <jer@gentoo.org> ettercap-0.7.3-r4.ebuild:
  Stable for HPPA (bug #347593).

  07 Dec 2010; Jeroen Roovers <jer@gentoo.org> ettercap-0.7.3-r4.ebuild:
  Stable for PPC (bug #347593).

  07 Dec 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  ettercap-0.7.3-r4.ebuild:
  x86 stable wrt bug #347593

  01 Dec 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  ettercap-0.7.3-r4.ebuild, +files/ettercap-0.7.3-autotools.patch:
  Fix build with libtool 2.4 by patching up the build system to work with
  automake 1.11; dependency tracking is broken though, so make sure to