@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX ettercap-0.7.3-64bit-casting.patch 591 RMD160 fdee869048dcdb510324e5b173e1e514c2aed2fd SHA1 e53753de80c2fecb1a2d677f6213886e5f272a22 SHA256 7ce23fd163ad8c53c442e789bf9f0db3716c35a5da76dad6687938c34b122897
 AUX ettercap-0.7.3-as-needed.patch 476 RMD160 1c7f5d24a4b77922e6499d048cd8b7b984db6eb4 SHA1 fd137a91ec37a5b1fbfa28fc075191cc92d298c7 SHA256 7722bd2e6f993d45e74ae8b36b200d34e10257fc7b2b8de7f76a6946f7a8046a
 AUX ettercap-0.7.3-autotools.patch 5368 RMD160 2d3ea1962be61aff0584f6b542f8c2e82297314d SHA1 647ca23c2e85fdefca7c650dec6ff1601c448cdf SHA256 9b9df4880b85d125233d6508b03e5912af1e00c4e0a863409a6ad235814eafd4
@@ -7,8 +10,25 @@ AUX ettercap-0.7.4-flags.patch 1056 RMD160 7b379c494f74de959e60f4eecb3fa5283e25a
 DIST ettercap-0.7.4.1.tar.gz 2997353 RMD160 e2946f0e55efcac830148cd95e503ca65dba62d0 SHA1 f4263230a6065af96b33093f39ed9a387453e3b2 SHA256 b1110f471247cf0ac7b05bf6ddb5df12a246192b97b15d942583d0fd35cb8b52
 DIST ettercap-0.7.4.tar.gz 2718877 RMD160 175655145148305132086876a3b43e5def2ee3de SHA1 28f43a1259c0b337de63a36657b4091f59667039 SHA256 9b5abd2dad2b6df91658086ceed6962a6b985ac25de8fa38f0195d68639ba55b
 DIST ettercap-NG-0.7.3.tar.gz 1138643 RMD160 f4e6c0d87b2064b3775e9af60f34575273742616 SHA1 7a2c3f848ca4f39c07fddeb0d6308641265bc4ff SHA256 c74239052d62565c13a82f9bbf217a4fdcce4b34949e361b53bb3f28e3168543
-EBUILD ettercap-0.7.3-r4.ebuild 1906 RMD160 e8fc5d8835d41332a62132507e46c4249868f74c SHA1 f1a0358dcb1ff86f6c1f0e214fe61f22a6765dbe SHA256 6efd0bae78ed12aee9f27c4a763e072be6690fd36e1b363fbbfa93c098282da9
+EBUILD ettercap-0.7.3-r4.ebuild 1911 RMD160 a5d93bdf2fc074e307ed25697077447e9b2a990f SHA1 1d5a36e9c47d2bb0dffb43a812eec071b3f7fd9a SHA256 229f69533000d4be87a5801ce9e7b10a5884f0928aa79bac31f17115e3fc5c72
 EBUILD ettercap-0.7.4.1.ebuild 1352 RMD160 e7b215c1deacde725a1df53fead31f5a7fd1408f SHA1 5fc3e57fce13fe64ab8d881aeb628d054b9eff60 SHA256 6a351f1af385d3c2e6ccdb72185d8c6b90cd7c032a3f694dbfc6c03fb279d892
 EBUILD ettercap-0.7.4.ebuild 1336 RMD160 a16d81cd266241ecb36ebb6944ab1f3e473a9d52 SHA1 4e275e2d788356cc21072ee1c4fcfaba88bf9b13 SHA256 f4d3cd79bacaba96b2b3ed0b71e4690b5d5896d2370e14ba592bd5e8bf117ad7
-MISC ChangeLog 11166 RMD160 561da8b79f1e835ef525c8b938d9d39439dad0f5 SHA1 01fc4916d3bc2fd8c036fdc7b35faa62028cf67a SHA256 62797df775fecc4829033747a21bedbea243b94582826b5ce947af6e7be07f40
+MISC ChangeLog 11272 RMD160 b39f68a44ad1a8bfa87b7f43265dcf1b2060882b SHA1 a0e8481b13ee7d182980cc09343d6a744c2f45da SHA256 0f6f55d9b7b4e06a3f3aaca0b071a9788db2e840de67179db6df8b0fd052d2b3
 MISC metadata.xml 159 RMD160 28e799fe0fd02aaab9d4bbe5595f133101606f5b SHA1 9f5df3eabd621951a959cc8e0e2e0d352cd1fe1e SHA256 b75c711bd971e46f0ec957e833c60879b0c5023e0bb94409a6255781b69f6dc6
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBAgAGBQJPus7wAAoJELEHsLL7fEFWHJgP/ikT6tFkIlfBPbatDqvevYWd
+GnoXR1OPhUBNwXb6yL5tSuAAsDGZx4pycjFWj6Kbe79fsfdwPvZHcWKbmeVR6I5b
+otGb+nBWo9A0c2HHz6ulKAl2oUa7dW/6dsZIjP9txMWuD1/2mQIwL1yUZewBj93I
+RTnjbZ1vjvGcEVKzyvhFxKyl8iBPhzQDF3H+TZ2peHugLsW/oOxu9B9F8tbCD8/9
+/JtLOzvq21LURp+5GPFBEpEzwMiE6gky3s9z7nL+e0iimAsSt9hpTLQVfkzunJHz
+uLhp85rljS/hveqQMAn286S+x1BvFgvNe43rkZ6saNlEodO25idncjROPeb/UXX1
+dBualNIjBAtjjvlQuJzUKQDyscnhq7C9rF6SokcYuMX7RLO4GmiLUUO4ODKcMfp7
+08zW0dANaMxCAqrcuhx+jOXoegIiydkgXtH4EvE3c/StznYwnqxw/dMWOxbO22cQ
+J12DDcVeTSvIUy5KS9e64uyiFQKJcgKbVCoq8x9MNvNguMx3du/z6078Ajd7xVhr
+FYaliIW5hFVLNopbxP3P5G18ScGLijhY6FHHaCLI7Qs7vJfZxvaK5o+hrGXlexft
+znao7018I1Y3bZ4vDuBJ5rWRscrnYIiYVrFu2IMsH/cCpEml3jeQGremBaTQNmBa
+XsIAlCePiAw+WkP0ATMN
+=56C0
+-----END PGP SIGNATURE-----
