@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/ettercap
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.88 2012/05/04 06:08:11 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.89 2012/05/21 23:24:30 vapier Exp $
+
+  21 May 2012; Mike Frysinger <vapier@gentoo.org> ettercap-0.7.3-r4.ebuild:
+  Inherit eutils for epatch.
 
   04 May 2012; Jeff Horelick <jdhore@gentoo.org> ettercap-0.7.4.ebuild,
   ettercap-0.7.4.1.ebuild:
